--- a/index.html
+++ b/index.html
@@ -19,8 +19,17 @@
       border-radius: 14px;
       box-shadow: 0 10px 30px rgba(0,0,0,0.1);
     }
-    .title { text-align: center; margin-bottom: 24px; }
-    label { font-weight: 600; display: block; margin-top: 14px; }
+
+    .title {
+      text-align: center;
+      margin-bottom: 24px;
+    }
+
+    label {
+      font-weight: 600;
+      display: block;
+      margin-top: 14px;
+    }
     input, textarea {
       width: 100%;
       padding: 12px;
@@ -43,6 +52,7 @@
     .dark { background:#111827; color:white; }
     .blue { background:#2563eb; color:white; }
     .success { background:#16a34a; color:white; }
+
     pre {
       background:#f1f5f9;
       padding:14px;
@@ -50,6 +60,7 @@
       white-space:pre-wrap;
       margin-top:10px;
     }
+
     .checkbox-row {
       display: flex;
       align-items: center;
@@ -57,7 +68,11 @@
       margin-top: 10px;
       font-weight: 600;
     }
-    .checkbox-row input { width: auto; margin: 0; }
+    .checkbox-row input {
+      width: auto;
+      margin: 0;
+    }
+
     .start-new-row {
       display: flex;
       justify-content: flex-end;
@@ -72,7 +87,12 @@
       cursor: pointer;
       opacity: 0.9;
     }
-    .hidden { display: none; }
+    .start-new-btn:hover {
+      opacity: 1;
+    }
+    .hidden {
+      display: none;
+    }
   </style>
 </head>
 
@@ -82,11 +102,17 @@
 <h1 class="title">MinPris – tilbudskalkulator</h1>
 
 <label>Arbeidsbeskrivelse</label>
-<textarea id="beskrivelse" rows="4"
-  placeholder="Beskriv jobben, f.eks: bad – 25t riving, 8t sanering"></textarea>
+
+<textarea
+  id="beskrivelse"
+  rows="4"
+  placeholder="Beskriv jobben, f.eks: bad – 25t riving, 8t sanering">
+</textarea>
 
 <div class="start-new-row">
-  <button type="button" id="startNyBtn"
+  <button
+    type="button"
+    id="startNyBtn"
     class="start-new-btn hidden"
     onclick="startNyBeskrivelse()">
     Slett og start ny beskrivelse
@@ -97,10 +123,10 @@
 <input id="timepris" type="number" />
 
 <label>Firmaadresse</label>
-<input id="firmaadresse" type="text" />
+<input id="firmaadresse" type="text" placeholder="F.eks: Storgata 1, Oslo" />
 
 <label>Kundeadresse</label>
-<input id="kundeadresse" type="text" />
+<input id="kundeadresse" type="text" placeholder="F.eks: Karl Johans gate 10, Oslo" />
 
 <div class="checkbox-row">
   <input type="checkbox" id="turRetur" checked />
@@ -146,13 +172,14 @@
 
 </div>
 
+<!-- GOOGLE MAPS -->
 <script
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4KVPzijWJug6VZBGsnBsDBXiuRvUR60o&libraries=places&language=no&callback=initAutocomplete"
   async defer>
 </script>
 
 <script>
-/* 🔹 HELE DIN OPPRINNELIGE JS – URØRT */
+/* 🔹 HELE ORIGINAL JS – URØRT */
 
 let kalkyle = null;
 
@@ -171,6 +198,26 @@ beskrivelseEl.addEventListener("input", () => {
   toggleStartNy();
 });
 
+/* TAB */
+beskrivelseEl.addEventListener("keydown", (e) => {
+  if (e.key === "Tab") {
+    e.preventDefault();
+    const start = beskrivelseEl.selectionStart;
+    const end = beskrivelseEl.selectionEnd;
+    const tab = "  ";
+
+    beskrivelseEl.value =
+      beskrivelseEl.value.substring(0, start) +
+      tab +
+      beskrivelseEl.value.substring(end);
+
+    beskrivelseEl.selectionStart =
+    beskrivelseEl.selectionEnd = start + tab.length;
+
+    localStorage.setItem("minpris_beskrivelse", beskrivelseEl.value);
+  }
+});
+
 function startNyBeskrivelse() {
   if (!confirm("Vil du slette og starte ny arbeidsbeskrivelse?")) return;
   beskrivelseEl.value = "";
@@ -187,6 +234,7 @@ function initAutocomplete() {
   });
 }
 
+/* KM */
 async function beregnKm() {
   if (!firmaadresse.value || !kundeadresse.value) {
     alert("Fyll inn begge adresser");
@@ -208,6 +256,7 @@ async function beregnKm() {
   kmPerDag.value = km.toFixed(1);
 }
 
+/* BEREGNING */
 function beregn() {
   const timer =
     (beskrivelse.value.match(/(\d+)\s*t/gi) || [])
@@ -238,17 +287,7 @@ function beregn() {
 `Arbeidsomfang:
 ${timer} timer over ${dager} dag(er)
 
-Totalpris (eks. mva):
-– Arbeid: ${Math.round(arbeid)} kr
-– Kjøring: ${Math.round(kjøring)} kr
-– Bom: ${Math.round(bom)} kr
-– HMS: ${Math.round(hmsTot)} kr
-– Avfall totalt: ${avf} kr
-– Materiell/forbruk totalt: ${mat} kr
---------------------
-Sum eks. mva: ${Math.round(totalEks)} kr
-
-Mva (25 %): ${Math.round(totalEks * 0.25)} kr
+Totalt eks. mva: ${Math.round(totalEks)} kr
 Totalt inkl. mva: ${Math.round(totalInk)} kr`;
 
   aiBtn.disabled = false;
