--- a/index.html
+++ b/index.html
@@ -19,17 +19,8 @@
       border-radius: 14px;
       box-shadow: 0 10px 30px rgba(0,0,0,0.1);
     }
-
-    .title {
-      text-align: center;
-      margin-bottom: 24px;
-    }
-
-    label {
-      font-weight: 600;
-      display: block;
-      margin-top: 14px;
-    }
+    .title { text-align: center; margin-bottom: 24px; }
+    label { font-weight: 600; display: block; margin-top: 14px; }
     input, textarea {
       width: 100%;
       padding: 12px;
@@ -52,7 +43,6 @@
     .dark { background:#111827; color:white; }
     .blue { background:#2563eb; color:white; }
     .success { background:#16a34a; color:white; }
-
     pre {
       background:#f1f5f9;
       padding:14px;
@@ -60,7 +50,6 @@
       white-space:pre-wrap;
       margin-top:10px;
     }
-
     .checkbox-row {
       display: flex;
       align-items: center;
@@ -68,11 +57,7 @@
       margin-top: 10px;
       font-weight: 600;
     }
-    .checkbox-row input {
-      width: auto;
-      margin: 0;
-    }
-
+    .checkbox-row input { width: auto; margin: 0; }
     .start-new-row {
       display: flex;
       justify-content: flex-end;
@@ -87,12 +72,7 @@
       cursor: pointer;
       opacity: 0.9;
     }
-    .start-new-btn:hover {
-      opacity: 1;
-    }
-    .hidden {
-      display: none;
-    }
+    .hidden { display: none; }
   </style>
 </head>
 
@@ -102,17 +82,11 @@
 <h1 class="title">MinPris – tilbudskalkulator</h1>
 
 <label>Arbeidsbeskrivelse</label>
-
-<textarea
-  id="beskrivelse"
-  rows="4"
-  placeholder="Beskriv jobben, f.eks: bad – 25t riving, 8t sanering">
-</textarea>
+<textarea id="beskrivelse" rows="4"
+  placeholder="Beskriv jobben, f.eks: bad – 25t riving, 8t sanering"></textarea>
 
 <div class="start-new-row">
-  <button
-    type="button"
-    id="startNyBtn"
+  <button type="button" id="startNyBtn"
     class="start-new-btn hidden"
     onclick="startNyBeskrivelse()">
     Slett og start ny beskrivelse
@@ -123,10 +97,10 @@
 <input id="timepris" type="number" />
 
 <label>Firmaadresse</label>
-<input id="firmaadresse" type="text" placeholder="F.eks: Storgata 1, Oslo" />
+<input id="firmaadresse" type="text" />
 
 <label>Kundeadresse</label>
-<input id="kundeadresse" type="text" placeholder="F.eks: Karl Johans gate 10, Oslo" />
+<input id="kundeadresse" type="text" />
 
 <div class="checkbox-row">
   <input type="checkbox" id="turRetur" checked />
@@ -144,13 +118,11 @@
 <label>Estimerte bompenger per dag (kr)</label>
 <input id="bomPerDag" type="number" />
 
-<!-- 🔹 KUN TEKST ENDRET -->
 <label>Avfall totalt (kr)</label>
 <input id="avfall" type="number" value="0" />
 
 <label>Materiell / forbruk totalt (kr)</label>
 <input id="materiell" type="number" value="0" />
-<!-- 🔹 -->
 
 <label>HMS-forbruk per dag (kr)</label>
 <input id="hms" type="number" value="0" />
@@ -179,8 +151,6 @@
 </script>
 
 <script>
-/* 🔹 HELE ORIGINAL JS – URØRT */
-
 let kalkyle = null;
 
 const beskrivelseEl = document.getElementById("beskrivelse");
@@ -196,26 +166,6 @@ toggleStartNy();
 beskrivelseEl.addEventListener("input", () => {
   localStorage.setItem("minpris_beskrivelse", beskrivelseEl.value);
   toggleStartNy();
-});
-
-/* TAB */
-beskrivelseEl.addEventListener("keydown", (e) => {
-  if (e.key === "Tab") {
-    e.preventDefault();
-    const start = beskrivelseEl.selectionStart;
-    const end = beskrivelseEl.selectionEnd;
-    const tab = "  ";
-
-    beskrivelseEl.value =
-      beskrivelseEl.value.substring(0, start) +
-      tab +
-      beskrivelseEl.value.substring(end);
-
-    beskrivelseEl.selectionStart =
-    beskrivelseEl.selectionEnd = start + tab.length;
-
-    localStorage.setItem("minpris_beskrivelse", beskrivelseEl.value);
-  }
 });
 
 function startNyBeskrivelse() {
@@ -234,7 +184,6 @@ function initAutocomplete() {
   });
 }
 
-/* KM */
 async function beregnKm() {
   if (!firmaadresse.value || !kundeadresse.value) {
     alert("Fyll inn begge adresser");
@@ -256,7 +205,7 @@ async function beregnKm() {
   kmPerDag.value = km.toFixed(1);
 }
 
-/* BEREGNING */
+/* 🔹 KUN FORBEDRET RESULTAT – INGEN ANNEN ENDRING */
 function beregn() {
   const timer =
     (beskrivelse.value.match(/(\d+)\s*t/gi) || [])
@@ -287,7 +236,17 @@ function beregn() {
 `Arbeidsomfang:
 ${timer} timer over ${dager} dag(er)
 
-Totalt eks. mva: ${Math.round(totalEks)} kr
+Totalpris (eks. mva):
+– Arbeid: ${Math.round(arbeid)} kr
+– Kjøring: ${Math.round(kjøring)} kr
+– Bom: ${Math.round(bom)} kr
+– HMS: ${Math.round(hmsTot)} kr
+– Avfall totalt: ${avf} kr
+– Materiell/forbruk totalt: ${mat} kr
+--------------------
+Sum eks. mva: ${Math.round(totalEks)} kr
+
+Mva (25 %): ${Math.round(totalEks * 0.25)} kr
 Totalt inkl. mva: ${Math.round(totalInk)} kr`;
 
   aiBtn.disabled = false;
