--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+Du har sendt
 <!DOCTYPE html>
 <html lang="no">
 <head>
@@ -43,6 +45,7 @@
     .dark { background:#111827; color:white; }
     .blue { background:#2563eb; color:white; }
     .success { background:#16a34a; color:white; }
+
     pre {
       background:#f1f5f9;
       padding:14px;
@@ -50,6 +53,7 @@
       white-space:pre-wrap;
       margin-top:10px;
     }
+
     .checkbox-row {
       display: flex;
       align-items: center;
@@ -58,6 +62,7 @@
       font-weight: 600;
     }
     .checkbox-row input { width: auto; margin: 0; }
+
     .start-new-row {
       display: flex;
       justify-content: flex-end;
@@ -73,6 +78,20 @@
       opacity: 0.9;
     }
     .hidden { display: none; }
+
+    /* ekstra poster – kun visning */
+    .ekstra-rad {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 4px;
+      font-size: 14px;
+    }
+    .ekstra-rad button {
+      width: auto;
+      padding: 2px 6px;
+      font-size: 12px;
+      margin-left: 8px;
+    }
   </style>
 </head>
 
@@ -127,6 +146,14 @@
 <label>HMS-forbruk per dag (kr)</label>
 <input id="hms" type="number" value="0" />
 
+<!-- 🔹 EKSTRA POSTER – KUN TILLEGG -->
+<div id="ekstraPoster"></div>
+
+<button type="button" class="blue" onclick="leggTilEkstraPost()">
+  + Legg til ekstra post
+</button>
+<!-- 🔹 SLUTT EKSTRA -->
+
 <button class="dark" onclick="beregn()">Beregn</button>
 <button class="blue" id="aiBtn" onclick="genererTilbud()" disabled>
   Generer tilbudstekst
@@ -144,7 +171,6 @@
 
 </div>
 
-<!-- GOOGLE MAPS -->
 <script
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4KVPzijWJug6VZBGsnBsDBXiuRvUR60o&libraries=places&language=no&callback=initAutocomplete"
   async defer>
@@ -153,6 +179,7 @@
 <script>
 let kalkyle = null;
 
+/* AUTOLAGRING */
 const beskrivelseEl = document.getElementById("beskrivelse");
 const startNyBtn = document.getElementById("startNyBtn");
 
@@ -184,6 +211,43 @@ function initAutocomplete() {
   });
 }
 
+/* EKSTRA POSTER – UI ONLY */
+let ekstraPoster = [];
+
+function leggTilEkstraPost() {
+  const navn = prompt("Hva gjelder posten?");
+  if (!navn) return;
+
+  const pris = prompt("Pris (kr):");
+  if (!pris) return;
+
+  ekstraPoster.push({ navn, pris });
+  visEkstraPoster();
+}
+
+function fjernEkstraPost(i) {
+  ekstraPoster.splice(i, 1);
+  visEkstraPoster();
+}
+
+function visEkstraPoster() {
+  const c = document.getElementById("ekstraPoster");
+  c.innerHTML = "";
+
+  ekstraPoster.forEach((p, i) => {
+    const rad = document.createElement("div");
+    rad.className = "ekstra-rad";
+    rad.innerHTML = `
+      <span>${p.navn}</span>
+      <span>${p.pris} kr
+        <button onclick="fjernEkstraPost(${i})">✕</button>
+      </span>
+    `;
+    c.appendChild(rad);
+  });
+}
+
+/* KM */
 async function beregnKm() {
   if (!firmaadresse.value || !kundeadresse.value) {
     alert("Fyll inn begge adresser");
@@ -205,7 +269,7 @@ async function beregnKm() {
   kmPerDag.value = km.toFixed(1);
 }
 
-/* 🔹 KUN FORBEDRET RESULTAT – INGEN ANNEN ENDRING */
+/* BEREGNING – HELT URØRT */
 function beregn() {
   const timer =
     (beskrivelse.value.match(/(\d+)\s*t/gi) || [])
